target/classes/META-INF/fabric8/openshift/visit-service-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: 5cbef54bce52631c2c350271961dfa2f47602701
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: master
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=visit-service&var-version=1.5.9
    fabric8.io/scm-tag: HEAD
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/spring-petclinic-microservices/visit-service
  labels:
    app: visit-service
    provider: fabric8
    version: 1.5.9
    group: org.springframework.samples.petclinic.visits
  name: visit-service
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: visit-service
    provider: fabric8
    group: org.springframework.samples.petclinic.visits
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: 5cbef54bce52631c2c350271961dfa2f47602701
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=visit-service&var-version=1.5.9
        fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/spring-petclinic-microservices/visit-service
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/git-branch: master
        fabric8.io/scm-tag: HEAD
      labels:
        app: visit-service
        provider: fabric8
        version: 1.5.9
        group: org.springframework.samples.petclinic.visits
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: visit-service:1.5.9
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8086
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8086
          name: d-s-n
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8086
            scheme: HTTP
          initialDelaySeconds: 10
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: visit-service:1.5.9
    type: ImageChange
