target/classes/META-INF/fabric8/openshift/visit-service-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: visit-service
    provider: fabric8
    version: 1.5.9
    group: org.springframework.samples.petclinic.visits
  name: visit-service
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: visit-service
